fixes z-index issue with header bar

--- a/w03c/d03/student/steve_zeidner_portfolio/stylesheets/style.css
+++ b/w03c/d03/student/steve_zeidner_portfolio/stylesheets/style.css
@@ -96,7 +96,9 @@ li{
 }
 
 .bigass-pic{
+position: relative;
  padding-top: 50px;
+ z-index: -1;
 }
 
 #overlay{
